make cards done

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,12 +1,10 @@
 @mixin tablet{
   @media(min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}){
-    @content
+    @content;
 }
 }
 @mixin desktop {
-  
-
-@media (min-width: #{$desktop-width}){
-  padding: 40px;
+  @media (min-width: #{$desktop-width}){
+  @content;
 }
 }
