--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,6 +3,6 @@ $dark-grey: dark grey;
 $light-grey: light grey;
 $white : white;
 $tablet-width: 768px;
-$desktop: 1024px;
+$desktop-width: 1024px;
 $nice-green: green;
  
