--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,5 +25,15 @@ body{
 .container {
   height: 100%;
   min-width: 400px;
-  
+  max-width: 768px;
+  margin: auto;
+.row {
+  ul {
+    li {
+      &:hover{
+        color: rebeccapurple;
+      }
+    }
+  }
+}
 }
