--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,12 @@
 @import 'reset';
 @import 'variables';
 @import 'mixins';
+
 body{
-  background-color:lightblue;
+  background-image: url("assets/bg.jpg");
+  backface-visibility: hidden;
+  background-repeat: repeat;
+  padding: 50px;
 }
 
 .header{
@@ -10,8 +14,6 @@ body{
   text-align: center;
   font-size: 2rem;
   line-height: 1.2;
-  color: $white;
-  background-color: $dark-grey;
 
   @include tablet{
     font-size: 2.125rem;
@@ -21,19 +23,33 @@ body{
     font-size: 2.125rem;
     padding: 30px;
   }
+  button{
+    font-size: 20px;
+  }
+
 }
 .container {
-  height: 100%;
-  min-width: 400px;
-  max-width: 768px;
+  column-count: 2;
+  background-image: url("assets/bg.jpg");
+ // height: 100%;
+  //min-width: 400px;
+ // max-width: 768px;
   margin: auto;
-.row {
-  ul {
-    li {
-      &:hover{
-        color: rebeccapurple;
-      }
-    }
-  }
 }
+
+.subCards {
+  border: 2px black solid;
+  text-align: center;
+  padding: 20px;
+  size: 320px;
+  overflow: scroll;
+  background-color: aqua;
+  width: 311px;
+  height: 386px
+
+}
+
+.image{
+    width: 137px;
+    height: 137px;
 }
